--- a/src/JapanesePracticeApp.UI/App.xaml
+++ b/src/JapanesePracticeApp.UI/App.xaml
@@ -7,7 +7,8 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <!-- Add any merged dictionaries here if needed -->
+                <!-- Theme Dictionary - Will be loaded dynamically by ThemeManager -->
+                <ResourceDictionary Source="Themes/LightTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <!-- Value Converters -->
